Fix: issue 1152 cid truncation (#1187)
* fix: cid on mobile so it truncates with ellipsis

* fix: popup styles for mobile table version

--- a/packages/website/styles/table.css
+++ b/packages/website/styles/table.css
@@ -72,6 +72,38 @@
   justify-content: flex-end;
 }
 
+@media screen and (max-width: 52em) {
+  .table-responsive table tr td.nowrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .table-responsive table tr td.nowrap .truncate {
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+  .table-responsive table tr td.nowrap .truncate + .icon-button {
+    padding-right: 0;
+  }
+
+  .table-responsive table tr td.nowrap .popup.active::after {
+    height: 12px;
+    left: inherit;
+    right: 10px;
+    top: -4px;
+    display: flex;
+    align-items: center;
+    border: 1px solid;
+    margin-left: 0;
+    animation: none;
+    width: auto;
+    font-size: 0.9rem !important;
+    padding: 5px 15px;
+    transform: none;
+  }
+}
+
 /* 832px */
 @media screen and (min-width: 52em) {
   /*Additive styles at full size*/
